docs: change version and generate docs
