# api/http/v1/user.go
@@ -35,7 +35,7 @@ func UserRegister(c *gin.Context) {
 // @Accept application/json
 // @Produce  application/json
 // @Param form body service.LoginService true "用户名, 密码"
-// @Success 0 {object} serializer.LoginResponse "msg: Success"
+// @Success 0 {object} serializer.Response "msg: Success"
 // @Failure 30001 {object} serializer.Response "msg: 参数错误"
 // @Router /user/login [post]
 func UserLogin(c *gin.Context) {
@@ -54,7 +54,7 @@ func UserLogin(c *gin.Context) {
 // @Tags User
 // @Produce  application/json
 // @Param Authorization header string true "用户令牌"
-// @Success 0 {object} serializer.BasicInfoResponse "msg: Success"
+// @Success 0 {object} serializer.UserResponse "msg: Success"
 // @Failure 50000 {object} serializer.Response "msg: 查询个人信息错误"
 // @Router /user/info [get]
 func UserInfo(c *gin.Context) {
@@ -80,6 +80,6 @@ func UserInfo(c *gin.Context) {
 // 		res := form.Update(c)
 // 		c.JSON(http.StatusOK, res)
 // 	} else {
-// 		c.JSON(http.StatusOK, sz.ParmErr())
+// 		c.JSON(http.StatusOK, sz.ParamErr())
 // 	}
 // }
