# docs/swagger.json
@@ -4,200 +4,11 @@
         "description": "The RESTFul API of Server",
         "title": "ACG.Fate API",
         "contact": {},
-        "version": "0.0.1"
+        "version": "0.2.1"
     },
     "host": "127.0.0.1:3000",
     "basePath": "/api/v1",
     "paths": {
-        "/check/username": {
-            "get": {
-                "description": "查询用户名是否存在",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Check"
-                ],
-                "summary": "查询用户名是否存在",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg: \"可用",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    },
-                    "40021": {
-                        "description": "msg: 用户名已存在",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/email/verify": {
-            "get": {
-                "description": "验证码邮件发送接口",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Email"
-                ],
-                "summary": "验证码邮件发送",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg: \"Success",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "验证邮件发送接口",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Email"
-                ],
-                "summary": "验证邮件发送",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "验证码",
-                        "name": "form",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/services.MailVerifyService"
-                        }
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg: \"Success",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/sign": {
-            "post": {
-                "description": "普通签到接口",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Task"
-                ],
-                "summary": "普通签到",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg: \"Success",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.TaskSignResponse"
-                        }
-                    },
-                    "60001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/user/email": {
-            "get": {
-                "description": "查询邮箱是否存在",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Check"
-                ],
-                "summary": "查询邮箱是否存在",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "name": "email",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg: \"可用",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    },
-                    "40022": {
-                        "description": "msg: 邮箱已存在",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
         "/user/info": {
             "get": {
                 "description": "用户个人信息接口",
@@ -221,7 +32,7 @@
                     "0": {
                         "description": "msg: Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.BasicInfoResponse"
+                            "$ref": "#/definitions/serializer.UserResponse"
                         }
                     },
                     "50000": {
@@ -253,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.LoginService"
+                            "$ref": "#/definitions/service.LoginService"
                         }
                     }
                 ],
@@ -261,7 +72,7 @@
                     "0": {
                         "description": "msg: Success",
                         "schema": {
-                            "$ref": "#/definitions/serializer.LoginResponse"
+                            "$ref": "#/definitions/serializer.Response"
                         }
                     },
                     "30001": {
@@ -293,7 +104,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/services.RegisterService"
+                            "$ref": "#/definitions/service.RegisterService"
                         }
                     }
                 ],
@@ -312,185 +123,9 @@
                     }
                 }
             }
-        },
-        "/user/update": {
-            "put": {
-                "description": "用户信息更新接口",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "User"
-                ],
-                "summary": "用户信息更新",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "用户信息",
-                        "name": "form",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/services.UpdateInfoService"
-                        }
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg: \"Success",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.BasicInfoResponse"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/words/:id": {
-            "get": {
-                "description": "文字查看接口",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Words"
-                ],
-                "summary": "文字查看",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Words ID",
-                        "name": "WID",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg:\"获取成功",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.WordsResponse"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/words/post": {
-            "post": {
-                "description": "文字发表接口",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Words"
-                ],
-                "summary": "文字发表",
-                "parameters": [
-                    {
-                        "description": "文字发表信息",
-                        "name": "form",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/services.PostService"
-                        }
-                    }
-                ],
-                "responses": {
-                    "0": {
-                        "description": "msg:\"发表成功",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    },
-                    "30001": {
-                        "description": "msg: 参数错误",
-                        "schema": {
-                            "$ref": "#/definitions/serializer.Response"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "serializer.BasicInfoResponse": {
-            "type": "object",
-            "properties": {
-                "birthday": {
-                    "type": "string"
-                },
-                "city": {
-                    "type": "string"
-                },
-                "credit": {
-                    "type": "integer"
-                },
-                "exp": {
-                    "type": "integer"
-                },
-                "gender": {
-                    "type": "string"
-                },
-                "join_time": {
-                    "type": "string"
-                },
-                "level": {
-                    "type": "integer"
-                },
-                "nickname": {
-                    "type": "string"
-                },
-                "province": {
-                    "type": "string"
-                },
-                "sign": {
-                    "type": "string"
-                },
-                "uid": {
-                    "type": "integer"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "serializer.LoginResponse": {
-            "type": "object",
-            "properties": {
-                "token": {
-                    "description": "Token",
-                    "type": "string"
-                },
-                "uid": {
-                    "description": "UID",
-                    "type": "integer"
-                }
-            }
-        },
         "serializer.Response": {
             "type": "object",
             "properties": {
@@ -505,53 +140,30 @@
                 }
             }
         },
-        "serializer.TaskSignResponse": {
+        "serializer.UserResponse": {
             "type": "object",
             "properties": {
-                "reward": {
+                "avatar": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "state": {
+                    "type": "integer"
+                },
+                "uid": {
+                    "type": "integer"
+                },
+                "username": {
                     "type": "string"
                 }
             }
         },
-        "serializer.WordsResponse": {
-            "type": "object",
-            "properties": {
-                "author": {
-                    "type": "string"
-                },
-                "category": {
-                    "type": "string"
-                },
-                "comments": {
-                    "type": "integer"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "edit_time": {
-                    "type": "string"
-                },
-                "likes": {
-                    "type": "integer"
-                },
-                "post_time": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "views": {
-                    "type": "integer"
-                },
-                "wid": {
-                    "type": "integer"
-                }
-            }
-        },
-        "services.LoginService": {
+        "service.LoginService": {
             "type": "object",
             "required": [
                 "password",
@@ -566,39 +178,7 @@
                 }
             }
         },
-        "services.MailVerifyService": {
-            "type": "object",
-            "required": [
-                "code"
-            ],
-            "properties": {
-                "code": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.PostService": {
-            "type": "object",
-            "required": [
-                "category",
-                "content"
-            ],
-            "properties": {
-                "category": {
-                    "type": "integer"
-                },
-                "content": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.RegisterService": {
+        "service.RegisterService": {
             "type": "object",
             "required": [
                 "email",
@@ -617,30 +197,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "services.UpdateInfoService": {
-            "type": "object",
-            "properties": {
-                "birthday": {
-                    "type": "string"
-                },
-                "city": {
-                    "type": "string"
-                },
-                "gender": {
-                    "description": "只能为 男、女、其他、保密",
-                    "type": "string"
-                },
-                "nickname": {
-                    "type": "string"
-                },
-                "province": {
-                    "type": "string"
-                },
-                "sign": {
                     "type": "string"
                 }
             }
